--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Diseñador Freelancer</title>
+    <!-- de esta forma se inserta una imagen en la pestaña del archivo abierto en internet-->
+    <link rel="icon" href="índice.icon.jpg" />
     <!--normalize sirve para que la pagina creada sea igual en cualquier navegador como chrome o firefox etc -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="preload" href="css/normalize.css" as="style" />
